tests/machine/x/c/json_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/json_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/json_builtin.c:137:13: error: incompatible type for argument 1 of ‘_json_int’
  137 |   _json_int(m);
      |             ^
      |             |
      |             map_string_int
/workspace/mochi/tests/machine/x/c/json_builtin.c:93:27: note: expected ‘int’ but argument is of type ‘map_string_int’
   93 | static void _json_int(int v) { printf("%d", v); }
      |                       ~~~~^

   1: #include <stdio.h>
